Task-88 Refactor use of components

--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -1,5 +1,5 @@
 <!-- scrape.html -->
-<div id="scrape-container" class="my-5 container">
+<div id="scrape-container" class="my-5 container" style="display: none;">
     <h1 class="display-4">Web Scraper Form</h1>
     
     <!-- Scraper Form -->
@@ -9,7 +9,7 @@
                 <label for="url-input" class="form-label">URL of Web Page</label>
                 <div class="input-group mb-3">
                     <input id="url-input" type="text" class="form-control" placeholder="Enter the URL here" aria-label="URL" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Submit</button>
+                    <button class="btn btn-outline-secondary" type="button" id="submitURLBtn">Submit</button>
                 </div>
             </div>
         </form>
