--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -1,5 +1,6 @@
 <!-- scrape.html -->
 <div id="scrape-container" class="my-5 container" style="display: none;">
+    <form id="highlightForm"><button id="highlightedBtn" type="button" class="btn-outline-secondary" value="Use Text">Get Highlighted Text</button></form>
     <h1 class="display-4">Web Scraper Form</h1>
     
     <!-- Scraper Form -->
