Task-127 Adjust styling and reconfigure class css designation

--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -1,9 +1,8 @@
 <!-- HTML component used for the label studio page in the application. -->
     <iframe
-        class="container embedded-content"
+        class="embedded-content shadow rounded"
         id="annotation-container"
         src="https://dlsmallw-test.hf.space"
-        width="850"
         height="600"
         style="display: none;"
         sandbox="allow-scripts allow-same-origin"
