--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -1,9 +1,23 @@
 <!-- HTML component used for the label studio page in the application. -->
+ <div id="annotation-container" class="position-relative" style="display: none;">
     <iframe
         class="embedded-content shadow rounded"
-        id="annotation-container"
+        id="annotation-iframe"
         src="https://dlsmallw-test.hf.space"
         height="600"
-        style="display: none;"
         sandbox="allow-scripts allow-same-origin"
-    ></iframe>
+    >
+    </iframe>
+    <svg 
+        class="position-absolute bottom-0 end-0" 
+        id="ext-win-btn" 
+        width="24" 
+        height="24" 
+        viewBox="0 0 24 24" 
+        stroke-width="1.5" 
+        fill="none" 
+        xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 3L15 3M21 3L12 12M21 3V9" stroke="currentColor"  stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M21 13V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V5C3 3.89543 3.89543 3 5 3H11" stroke="currentColor"  stroke-linecap="round"/>
+    </svg>
+</div>
