Task-127 Tweaked fade in/out of button to be more visually appealing

--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -320,14 +320,14 @@ body {
     width: 100%;
     border: lightgray solid thin;
     background-color: white;
+    z-index: -1;
 }
 
 #ext-win-btn {
+    opacity: 0;
     color: black;
-    opacity: 20%;
     cursor: pointer;
     transform: translateY(-50%) translateX(-20%);
-    z-index: 1;
 }
 
 /*=======================================================================
