Task-123 Improve UI and remove app title bar

--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -117,6 +117,14 @@ body {
 /*=======================================================================
     Navbar Styling
 =======================================================================*/
+.draggable {
+    -webkit-app-region: drag;
+}
+
+.not-draggable {
+    -webkit-app-region: no-drag;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between; /* Space between brand and nav items */
