Found the issues with pages not displaying
Also, added redundancy to changePage() to prevent log errors.

--- a/web-scraping-electron-app/renderer/components/logs.html
+++ b/web-scraping-electron-app/renderer/components/logs.html
@@ -5,4 +5,4 @@
         <p>Logs will be displayed here!</p>
     </div>
 </div>
-<script src="../renderer/js/renderer.js"></script>
+<!--<script src="../renderer/js/renderer.js"></script>-->
