--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -1,5 +1,5 @@
 <!-- scrape.html -->
-<div id="scrape-container" class="my-5 container" style="display: none;">
+<div id="scrape-container" class="my-5 container">
     <h1 class="display-4">Web Scraper Form</h1>
     
     <!-- Scraper Form -->
