Fixed the hookups as best I could
Unsure if the logger is not picking up data, or if I am accessing it improperly.

--- a/web-scraping-electron-app/renderer/components/logs.html
+++ b/web-scraping-electron-app/renderer/components/logs.html
@@ -2,17 +2,18 @@
 <div>
     <div id="logs-container" class="my-5 container">
         <h1 class="display-4">Logs</h1>
-        <!-- Filter Dropdown -->
-        <div class="mb-3">
-            <label for="log-filter" class="form-label">Filter Logs:</label>
-             <select id="log-filter" class="form-select">
+        
+        <!-- Log filter -->
+        <form>
+            <label for="log-dropdown" class="form-label">Filter Logs:</label>
+             <select id="log-dropdown" class="form-select" onchange="setLogs(this)">
+                <option value="SELECT">Select</option>
                 <option value="ALL">All</option>
                 <option value="INFO">Info</option>
                 <option value="ERROR">Error</option>
                 <option value="DEBUG">Debug</option>
             </select>
-
-        </div>
+        </form>
 
         <!-- Log Output Section -->
         <pre id="log-output" class="bg-dark text-white p-3 rounded" style="max-height: 400px; overflow-y: auto;">
