defined our logging standards and switched out a few old logging statements

--- a/web-scraping-electron-app/renderer/components/log.html
+++ b/web-scraping-electron-app/renderer/components/log.html
@@ -6,10 +6,12 @@
     <div class="mb-3">
         <label for="log-filter" class="form-label">Filter Logs:</label>
          <select id="log-filter" class="form-select">
-            <option value="ALL">All</option>
-            <option value="INFO">Info</option>
-            <option value="ERROR">Error</option>
-            <option value="DEBUG">Debug</option>
+             <option value="ALL">All</option>
+             <option value="info">Info</option>
+             <option value="debug">Debug</option>
+             <option value="warn">Warn</option>
+             <option value="error">Error</option>
+
         </select>
 
     </div>
