Task-131 Implement basic structure of label studio url input form

--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -8,7 +8,7 @@
             <div class="mb-3">
                 <label for="url-input" class="form-label">URL of Web Page</label>
                 <div class="input-group mb-3">
-                    <input id="url-input" type="text" class="form-control" placeholder="Enter the URL here" aria-label="URL" aria-describedby="button-addon2">
+                    <input id="url-input" type="text" class="form-control" placeholder="Enter the URL here" aria-label="URL">
                     <button class="btn btn-outline-secondary" type="button" id="submitURLBtn">Submit</button>
                 </div>
             </div>
