--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -1,25 +1,34 @@
 <!-- HTML component used for the label studio page in the application. -->
  <div id="annotation-container" class="position-relative" style="display: none;">
     <div id="ls-embedded">
-        <iframe
-        class="embedded-content shadow rounded"
-        id="annotation-iframe"
-        src="https://dlsmallw-test.hf.space"
-        height="600"
-        sandbox="allow-scripts allow-same-origin"
-        ></iframe>
-        <svg 
-            class="position-absolute bottom-0 end-0" 
-            id="ext-win-btn" 
-            width="30" 
-            height="30" 
-            viewBox="0 0 24 24" 
-            stroke-width="1.5" 
-            fill="none" 
-            xmlns="http://www.w3.org/2000/svg">
-                <path d="M21 3L15 3M21 3L12 12M21 3V9" stroke="currentColor"  stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M21 13V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V5C3 3.89543 3.89543 3 5 3H11" stroke="currentColor"  stroke-linecap="round"/>
-        </svg>
+        <div id="ls-not-set">
+            <div id="ls-form" class="form-group">
+                <label for="ls-link-input">URL of Label Studio Project</label>
+                <input type="text" class="form-control" id="ls-link-input" placeholder="Enter the URL to the Label Studio Project">
+                <button class="btn btn-outline-secondary" type="button" id="submitLSURLBtn">Submit</button>
+            </div>
+        </div>
+        <div id="ls-set">
+            <iframe
+                class="embedded-content shadow rounded"
+                id="annotation-iframe"
+                src="https://dlsmallw-test.hf.space"
+                height="600"
+                sandbox="allow-scripts allow-same-origin"
+            ></iframe>
+            <svg 
+                class="position-absolute bottom-0 end-0" 
+                id="ext-win-btn" 
+                width="30" 
+                height="30" 
+                viewBox="0 0 24 24" 
+                stroke-width="1.5" 
+                fill="none" 
+                xmlns="http://www.w3.org/2000/svg">
+                    <path d="M21 3L15 3M21 3L12 12M21 3V9" stroke="currentColor"  stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M21 13V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V5C3 3.89543 3.89543 3 5 3H11" stroke="currentColor"  stroke-linecap="round"/>
+            </svg>
+        </div>
     </div>
     <div id="ls-external" class="embedded-content shadow rounded" style="display: none;">
         <span class="" id="ls-external-text">Label Studio Open Externally</span>
