Task-131 Update logic to handle changing the linked label studio project

--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -12,7 +12,7 @@
             <iframe
                 class="embedded-content shadow rounded"
                 id="annotation-iframe"
-                src="https://dlsmallw-test.hf.space"
+                src=""
                 height="600"
                 sandbox="allow-scripts allow-same-origin"
             ></iframe>
