Task-131 Add a reset button for clearing the linked LS project to assist in development

--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -33,5 +33,6 @@
     <div id="ls-external" class="embedded-content shadow rounded" style="display: none;">
         <span class="" id="ls-external-text">Label Studio Open Externally</span>
     </div>
+    <button class="btn btn-outline-secondary" type="button" id="clearLSLinkBtn">Reset</button>
     
 </div>
