--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -1,14 +1,19 @@
 <!-- HTML component used for the label studio page in the application. -->
- <div id="annotation-container" class="position-relative" style="display: none;">
+ <div id="annotation-container" class="my-5" style="display: none;">
+    <h1 class="display-4">Label Studio</h1>
     <div id="ls-embedded">
         <div id="ls-not-set">
-            <div id="ls-form" class="form-group">
-                <label for="ls-link-input">URL of Label Studio Project</label>
-                <input type="text" class="form-control" id="ls-link-input" placeholder="Enter the URL to the Label Studio Project">
-                <button class="btn btn-outline-secondary" type="button" id="submitLSURLBtn">Submit</button>
+            <div id="ls-form" class="form-group my-4">
+                <label for="ls-link-input" class="form-label">URL of Label Studio Project</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="ls-link-input" placeholder="Enter the URL to the Label Studio Project">
+                    <button class="btn btn-outline-secondary" type="button" id="submitLSURLBtn">Submit</button>
+                </div>
+
+                
             </div>
         </div>
-        <div id="ls-set">
+        <div id="ls-set" class="position-relative">
             <iframe
                 class="embedded-content shadow rounded"
                 id="annotation-iframe"
