--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -1,57 +1,65 @@
 <!-- scrape.html -->
-<div id="scrape-container" class="my-5 container" style="display: none;">
-    <h1 class="display-4">Web Scraper Form</h1>
+<div id="scrape-container" class="my-5 container position-relative" style="display: none;">
+    <h1 class="display-4">Web Scraper</h1>
+    <button class="btn btn-outline-secondary btn-sm position-absolute top-0 end-0" type="button" id="scrape-mode-toggle">Manual Mode</button>
     
-    <!-- Scraper Form -->
-    <div id="scrape-form-container" class="my-4">
-        <form>
-            <div class="mb-3">
-                <label for="url-input" class="form-label">URL of Web Page</label>
-                <div class="input-group mb-3">
-                    <input id="url-input" type="text" class="form-control" placeholder="Enter the URL here" aria-label="URL">
-                    <button class="btn btn-outline-secondary" type="button" id="submitURLBtn">Submit</button>
+    <div id="url-scrape-container">
+        <h4>URL Mode</h4>
+        <!-- Scraper Form -->
+        <div id="scrape-form-container" class="my-4">
+            <form>
+                <div class="mb-3">
+                    <label for="url-input" class="form-label">URL of Web Page</label>
+                    <div class="input-group mb-3">
+                        <input id="url-input" type="text" class="form-control" placeholder="Enter the URL here" aria-label="URL">
+                        <button class="btn btn-outline-secondary" type="button" id="submitURLBtn">Submit</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <!-- Results Container -->
+        <div id="results-container" class="accordion mt-5" style="display: none;">
+            <div class="mb-3 row">
+                <label for="staticURL" class="col-sm-2 col-form-label">URL</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="staticURL" value="">
                 </div>
             </div>
-        </form>
+
+            <!-- Formatted Data Accordion -->
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        Formatted Data
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse">
+                    <div class="accordion-body" id="formatted-data-text">
+                        <!-- Placeholder Text -->
+                        <p>Formatted data will appear here.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Raw Data Accordion -->
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Raw Data
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse">
+                    <div class="accordion-body" id="raw-data-text">
+                        <!-- Placeholder Text -->
+                        <p>Raw data will appear here.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- Results Container -->
-    <div id="results-container" class="accordion mt-5" style="display: none;">
-        <div class="mb-3 row">
-            <label for="staticURL" class="col-sm-2 col-form-label">URL</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" id="staticURL" value="">
-            </div>
-        </div>
-
-        <!-- Formatted Data Accordion -->
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    Formatted Data
-                </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse">
-                <div class="accordion-body" id="formatted-data-text">
-                    <!-- Placeholder Text -->
-                    <p>Formatted data will appear here.</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Raw Data Accordion -->
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Raw Data
-                </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse">
-                <div class="accordion-body" id="raw-data-text">
-                    <!-- Placeholder Text -->
-                    <p>Raw data will appear here.</p>
-                </div>
-            </div>
-        </div>
+    <div id="manual-scrape-container">
+        <h4>Manual Mode</h4>
     </div>
 </div>
