--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -248,6 +248,10 @@ body {
     color: var(--primary-color);
 }
 
+#scrape-mode-toggle {
+    transform: translateY(20%) translateX(-20%);
+}
+
 /*=======================================================================
     Form Styling
 =======================================================================*/
