Task-128 Update styling and add function headers

--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -9,8 +9,6 @@
                     <input type="text" class="form-control" id="ls-link-input" placeholder="Enter the URL to the Label Studio Project">
                     <button class="btn btn-outline-secondary" type="button" id="submitLSURLBtn">Submit</button>
                 </div>
-
-                
             </div>
         </div>
         <div id="ls-set" class="position-relative">
@@ -38,6 +36,12 @@
     <div id="ls-external" class="embedded-content shadow rounded" style="display: none;">
         <span class="" id="ls-external-text">Label Studio Open Externally</span>
     </div>
-    <button class="btn btn-outline-secondary" type="button" id="clearLSLinkBtn">Reset</button>
+    <button 
+        class="
+            btn 
+            btn-outline-secondary 
+            btn-sm" 
+        type="button" 
+        id="clearLSLinkBtn">Clear Linked Project</button>
     
 </div>
