--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -335,7 +335,9 @@ body {
 =======================================================================*/
 #annotation-container {
     min-width: 900px;
-    height: 60vh;
+    height: 68vh;
+    max-height: 70vh;
+    min-height: 60vh;
 }
 
 .embedded-content {
