Trying to create/catch an event for right clicking in other window

--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -10,6 +10,11 @@
                 <div class="input-group mb-3">
                     <input id="url-input" type="text" class="form-control" placeholder="Enter the URL here" aria-label="URL" aria-describedby="button-addon2">
                     <button class="btn btn-outline-secondary" type="button" id="submitURLBtn">Submit</button>
+
+
+                </div>
+                <div class="input-group mb-3">
+                    <button class="btn btn-outline-secondary" type="button" id="submitScrapeBtn">Scrape</button>
                 </div>
             </div>
         </form>
