Task-121 Implement the logic for updating linked LS project information

--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -2,6 +2,7 @@
  <div id="annotation-container" class="my-5" style="display: none;">
     <h1 class="display-4">Label Studio</h1>
     <div id="ls-embedded">
+        <!--Form for entering an LS Project URL if none is linked-->
         <div id="ls-not-set">
             <div id="ls-form" class="form-group my-4">
                 <label for="ls-link-input" class="form-label">URL of Label Studio Project</label>
@@ -11,6 +12,7 @@
                 </div>
             </div>
         </div>
+        <!--The embedded LS app-->
         <div id="ls-set" class="position-relative">
             <iframe
                 class="embedded-content shadow rounded"
@@ -19,6 +21,7 @@
                 height="600"
                 sandbox="allow-scripts allow-same-origin"
             ></iframe>
+            <!--A button for openning the LS app in an external window-->
             <svg 
                 class="position-absolute bottom-0 end-0" 
                 id="ext-win-btn" 
@@ -36,12 +39,36 @@
     <div id="ls-external" class="embedded-content shadow rounded" style="display: none;">
         <span class="" id="ls-external-text">Label Studio Open Externally</span>
     </div>
-    <button 
-        class="
-            btn 
-            btn-outline-secondary 
-            btn-sm" 
-        type="button" 
-        id="clearLSLinkBtn">Clear Linked Project</button>
+
+    <!--Config menu for updating LS URL/API Token-->
+    <div class="accordion-item accordion" id="ls-config-accordion">
+        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ls-config" aria-expanded="false" aria-controls="ls-config">
+                Label Studio Configuration
+            </button>
+        </h2>
+        <div id="ls-config" class="accordion-collapse collapse">
+            <div class="accordion-body" id="ls-config-container">
+                <label for="ls-link-option" class="form-label">URL of Label Studio Project</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="ls-link-option" placeholder="Enter the URL to the Label Studio Project">
+                    <button class="btn btn-outline-secondary" type="button" id="update-ls-link-btn">Update</button>
+                </div>
+                <label for="ls-api-token-option" class="form-label">Label Studio Project API Token</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="ls-api-token-option" placeholder="Enter the API Token for the linked Label Studio Project">
+                    <button class="btn btn-outline-secondary" type="button" id="update-api-token-btn">update</button>
+                </div>
+                <button 
+                    class="
+                        btn 
+                        btn-outline-secondary 
+                        btn-sm" 
+                    type="button" 
+                    id="clearLSLinkBtn">Clear Linked Project</button>
+            </div>
+        </div>
+    </div>
+    
     
 </div>
