Task-122 Refactor LS api code to minimize repeated code and also implement use of JSON object with more descriptive information returned

--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -19,7 +19,7 @@
                 id="annotation-iframe"
                 src=""
                 height="600"
-                sandbox="allow-scripts allow-same-origin"
+                sandbox="allow-scripts allow-same-origin allow-forms"
             ></iframe>
             <!--A button for openning the LS app in an external window-->
             <svg 
