--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -310,6 +310,33 @@ body {
 }
 
 /*=======================================================================
+    Right Click Menu styling
+=======================================================================*/
+#rightClickMenu {
+    z-index: 1000;
+  position: absolute;
+  background-color: #C0C0C0;
+  border: 1px solid blue;
+  padding: 2px;
+  margin: 0;
+  list-style-type: none;
+  list-style: none;
+
+}
+
+#rightClickMenu a {
+    display: block;
+}
+
+.showMenu {
+    display: block;
+}
+
+.hideMenu {
+    display: none;
+}
+
+/*=======================================================================
     Responsive Utilities for Modern Design
 =======================================================================*/
 @media (max-width: 768px) {
