Cleaned up the menu appearance
Also, moved it into the proper file since I've tested it.

--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -1,6 +1,11 @@
 <!-- scrape.html -->
 <div id="scrape-container" class="my-5 container" style="display: none;">
     <h1 class="display-4">Web Scraper Form</h1>
+
+    <!-- Right Click Menu -->
+    <div id="rightClickMenu" class="hideMenu">
+        <a>Send Highlighted Text</a>
+    </div>
     
     <!-- Scraper Form -->
     <div id="scrape-form-container" class="my-4">
