--- a/web-scraping-electron-app/renderer/css/style.css
+++ b/web-scraping-electron-app/renderer/css/style.css
@@ -315,18 +315,23 @@ body {
 #rightClickMenu {
     z-index: 1000;
   position: absolute;
-  background-color: #C0C0C0;
-  border: 1px solid blue;
+  background-color: var(--primary-bg);
+  border: 1px solid var(--accent-bg);
+  border-radius: 4px;
   padding: 2px;
   margin: 0;
   list-style-type: none;
   list-style: none;
   cursor: pointer;
 
+
 }
 
 #rightClickMenu a {
     display: block;
+    color: var(--primary-color);
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .showMenu {
