--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -27,7 +27,7 @@
 
     <!-- Results Container -->
     <div id="results-container" class="accordion mt-5" style="display: none;">
-        <iframe id="iFrameResults" sandbox></iframe>
+        <iframe id="iFrameResults" sandbox="allow-scripts allow-popups allow-same-origin" ></iframe>
         <div class="mb-3 row">
             <label for="staticURL" class="col-sm-2 col-form-label">URL</label>
             <div class="col-sm-10">
