--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -27,6 +27,10 @@
 
     <!-- Results Container -->
     <div id="results-container" class="accordion mt-5" style="display: none;">
+        <webview id="foo" src="https://www.github.com/" style="display:inline-flex; width:640px; height:480px"></webview>
+
+
+
         <iframe id="iFrameResults" sandbox="allow-scripts allow-popups allow-same-origin" ></iframe>
         <div class="mb-3 row">
             <label for="staticURL" class="col-sm-2 col-form-label">URL</label>
@@ -65,4 +69,5 @@
             </div>
         </div>
     </div>
+    
 </div>
